# gcp-k8s-fastapi

./: .cookiecutter.json  .flake8  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yml  mkdocs.yml  pyproject.toml
.github/workflows/: Building.yaml  Building.yml  Deploy.yaml  Linting.yaml  Linting.yml  ReleasePipeline.yaml
deployment/: Dockerfile  deployment.yaml  read_version.py
deployment/fastapi-twitter-clone/: Chart.yaml  values.yaml
deployment/fastapi-twitter-clone/templates/: _helpers.tpl  cert-issuer.yaml  deployment.yaml  kibana-config.yaml  ssl-secret.yaml
docs/: generate_ref_pages.py  index.md
sql_alchemy_examples/: add_user.py  repo_demo.py
src/: alembic.ini  app.py  backend_conf.py  dependency_injection.py  init_db.py  run_app.py
src/alembic/: env.py
src/alembic/versions/: bb49ad8bb420_added_initial_table.py  c9b4fd9023b0_added_tweet_table.py
src/gcp_fastapi/: __init__.py  app.py
src/general_types/: exeption_base.py  general_responses.py  typesafe_representations.py
src/general_types/.github/workflows/: testing.yml
src/health/: __init__.py  k8s_health.py
src/kibana_monitoring/: setup_kibana.py
src/observability/kibana_monitoring/: kibana_config.py  setup_kibana.py
src/observability/promethous/: setup_promethous.py
src/sqlalchemymodels/: DBUserModel.py  __init__.py  auditing.py  connect_db.py  model_registry.py  predifined_types.py
src/users/controllers/: users_web.py
src/users/dtos/: create_user_dto.py  user_response_model.py
src/users/exceptions/: exeptions.py
src/users/repositories/: abstract_blobstore.py  abstract_user_repository.py  file_blobstore.py  sql_user_repository.py
src/users/services/: BasicUserService.py  IUserService.py
tests/: __init__.py  test_docs.py
tests/unittests/: conftest.py
tests/unittests/users/: test_user_service.py
