[tool.poetry]
name = "gcp-fastapi"
version = "0.0.1"
description = "GCP FastAPI K8S Deployment"
authors = ["John Sorial <contact@jsorial.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
uvloop = { version = "^0.17.0", markers = 'sys_platform != "win32"' }
fastapi-restful = "^0.4.3"
sqlalchemy = "^1.4.44"
sqlalchemy-utils = "^0.38.3"
pydantic = { extras = ["email"], version = "^1.10.2" }
injector = "^0.20.1"
aiofiles = "^22.1.0"
alembic = "^1.8.1"




[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.2"
black = "^22.10.0"
coverage = "^6.5.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.10.27"
isort = "^5.10.1"
mypy = "^0.990"
pep8-naming = "^0.13.2"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
pytest = "^7.2.0"
commitizen = "^2.29.5"
mkdocs-gen-files = "^0.4.0"
mkdocs-material = "^8.3.9"
mkdocstrings = { extras = ["crystal", "python"], version = "^0.19.0" }
pymdown-extensions = "^9.5"
Pygments = "^2.12.0"
mktestdocs = "^0.2.0"
sqlalchemy2-stubs = "^0.0.2a29"
pytest-subtests = "^0.9.0"
autoflake = "^1.7.7"


[tool.taskipy.tasks]
test = { cmd = "pytest src/tests", help = "Runs pytest on the codebase" }
mypy = { cmd = "mypy src/gcp_fastapi", help = "Runs static code anaylsis on the package" }
format = { cmd = "isort src && black src" }
docs-serve = { cmd = "mkdocs serve", help = "Serves the docs locally" }
docs-regen = { cmd = "python docs/generate_ref_pages.py && git add docs", help = "Regenerates the automatic documentation" }

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["gcp_fastapi", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_unused_ignores = true
no_implicit_optional = true


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "v$version"

[tool.autoflake]
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
